[package]
name = "rusty-leveldb"
version = "0.3.0"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "A compatible re-implementation of LevelDB in Rust"
homepage = "https://github.com/dermesser/leveldb-rs"
repository = "https://borgac.net/lbo/hg/"
readme = "README.md"
keywords = ["LevelDB", "key-value", "database", "SSTable", "Google"]
license = "MIT"
publish = true
edition = "2018"
resolver = "2"


[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["protected_fs_rs/mesalock_sgx", "sgx_libc", "sgx_tstd", "sgx_types", "sgx_trts"]
#enclave_unit_test = ["teaclave_test_utils/mesalock_sgx"]

[dependencies]
crc   = { version = "2.0", git = "https://github.com/mesalock-linux/crc-rs-sgx" }
rand  = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3" }
snap  = { version = "0.2", git = "https://github.com/mesalock-linux/rust-snappy-sgx" }
integer-encoding = { version = "1.0", git = "https://github.com/mesalock-linux/integer-encoding-rs-sgx" }

protected_fs_rs = { path = "../protected_fs_rs", optional = true }
#teaclave_test_utils = { path = "../tests/utils", optional = true }

sgx_tstd        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"], optional = true }
sgx_trts        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_types       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_alloc       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_libc        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tunittest   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_tstd = { path = "../sgx_tstd" }
sgx_trts = { path = "../sgx_trts" }
sgx_types = { path = "../sgx_types" }
sgx_alloc = { path = "../sgx_alloc" }
sgx_libc = { path = "../sgx_libc" }
sgx_tunittest = { path = "../sgx_tunittest" }
