[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []
enclave_unit_test = ["teaclave_test_utils/mesalock_sgx"]

[dependencies]
rusty-leveldb = { path = "../../.." }
teaclave_test_utils = { path = "../../../../tests/utils", optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_alloc     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts      = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../../sgx_types" }
sgx_tstd = { path = "../../../../sgx_tstd" }
sgx_tunittest = { path = "../../../../sgx_tunittest" }
sgx_alloc = { path = "../../../../sgx_alloc" }
sgx_trts = { path = "../../../../sgx_trts" }
